[tool.poetry]
name = "data-sampling-tools"
version = "0.3.0"
description = ""
authors = ["Andrei Margert <andrei.margert@wur.nl>"]
readme = "README.md"
packages = [{include = "data_sampling_tools"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PyYAML = "^6.0"
opencv-python = "^4.6.0.66"
pydantic = "^1.10.6"
xarray = {extras = ["io", "parallel"], version = "^2023.7.0"}
polars = "^0.17.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
